--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,8 @@ subprojects {
 	    implementation "org.springframework:spring-core:${springVersion}"
 	    implementation "org.springframework:spring-context:${springVersion}"
 		implementation "org.springframework:spring-beans:${springVersion}"
-		
+		implementation "org.springframework:spring-webmvc:${springVersion}"
+
 		//logging 설정 
 		//implementation "org.slf4j:slf4j-simple:1.7.25" //설정시 logback.xml 파일 안 읽음 
 		implementation'ch.qos.logback:logback-classic:1.2.3'
